# sr-bonded-token

./: .gitignore  Cargo.toml  README.md  Tutorial.md  types.json
bonded-token-ui/: package-lock.json
bonded-token-ui/src/: app.jsx
runtime/: Cargo.toml
runtime/src/: BondedFungibleToken.rs  bonded-token2.rs  bonded_token.rs  bonded_token2.rs  lib.rs
runtime/wasm/: Cargo.toml
src/: main.rs
