[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['node-template-runtime/std']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime-wasm'
version = '0.9.0'

[lib]
crate-type = ['cdylib']
[dependencies.node-template-runtime]
default-features = false
path = '..'

[workspace]
members = []
